# migrate-rs

./: .gitignore  Cargo.toml  README.md  config.sample.toml  flake.nix  module.nix  package.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: ikx99aci297hpgys7114fjwyf38iv9qi-source  mgpyqhv1dxx1xc5mxlifpjy00vjffk9v-source
nix/: module.nix  overlay.nix  package.nix
src/: config.rs  main.rs  migrate.rs  store.rs
