[package]
name = "migrate-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
demostf-client = { version = "0.4.1", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
futures-util = "0.3.21"
md5 = "0.7.0"
main_error = "0.1.2"
